src/main/java/com/example/coupon/domain/errors/AlreadyUsedCoupon.java
package com.example.coupon.domain.errors;

public class AlreadyUsedCoupon extends RuntimeException{
}
